Web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  selector:
    matchLabels:
      app: web-deployment
  replicas: 1
  template:
    metadata:
      labels:
        app: web-deployment
    spec:
      dnsPolicy: Default
      containers:
      - name: web
        image: lukasztomalczyk/citizenbudget.web:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
          - name: config
            mountPath: /app/logs
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: logs-volume-claim
