Web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: citizen-budget 
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/enable-cors: "true"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: web-expose
            servicePort: 80
